Scrolling to selected verse. Fixed jumping to chapter with found match. More to come.

--- a/share/style.css
+++ b/share/style.css
@@ -15,7 +15,11 @@ html
 
 .verse.selected
 {
-    background: #ffc;
+    background: #ffb;
+}
+.verse.selected .verse-label
+{
+    color: #c00;
 }
 
 .verse-label
